--- a/Linear_Regression_practise_boston.ipynb
+++ b/Linear_Regression_practise_boston.ipynb
@@ -694,7 +694,7 @@
     "corr=boston_df.corr()\n",
     "sns.heatmap(corr,annot=True)\n",
     "\n",
-    "# check for variable that are highly correlated with reach other (you can either neglect them as they will provide much of use if two variable are highly correlated because the variation will be very less.)"
+    "# check for variable that are highly correlated with reach other (you can either neglect one of them as they will not provide much of useful information if two variable are highly correlated because variation will be very less.)"
    ]
   },
   {
